--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AppLove</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <header>
-      <div>
-        <a>Services</a>
-        <a>Work</a>
-        <a>The team</a>
+      <div class="text-uppercase">
+        <a><strong>Services</strong></a>
+        <a><strong>Work</strong></a>
+        <a><strong>The team</strong></a>
       </div>
     </header>
     <section>
-      <div>
+      <div class="text-uppercase">
+        <img src="assets/images/bg-home.jpg" alt="Principal image">
         <h2>you just found an untilmate</h2>
         <h1>We are applove from heart</h1>
         <p>handcrafted - modern design - pixel perfect - passioned design</p>
