añadiendo estilos a la segunda parte de AppLove

--- a/index.html
+++ b/index.html
@@ -26,27 +26,30 @@
         <a>View services</a>
       </div>
     </section>
-    <section>
+    <section class="second_section">
       <div>
-        <h2>Services</h2>
+        <h2 class="text-uppercase">Services</h2>
         <h4>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididuntut,<br>
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
         </h4>
-        <div>
-          <h5>user interface design</h5>
+        <div id="first_div">
+          <img src="assets/images/services-1.png" alt="First Service">
+          <h5 class="text-uppercase">user interface design</h5>
           <h6>Wireframing</h6>
           <h6>Prototyping</h6>
           <h6>Usability testing</h6>
         </div>
-        <div>
-          <h5>concept and ideas</h5>
+        <div id="second_div">
+          <img src="assets/images/services-2.png" alt="Second Service">
+          <h5 class="text-uppercase">concept and ideas</h5>
           <h6>Conceptualization</h6>
           <h6>Digital Branding</h6>
           <h6>Product Strategy</h6>
         </div>
-        <div>
-          <h5>desing and branding</h5>
+        <div id="third_div">
+          <img src="assets/images/services-3.png" alt="Third Service">
+          <h5 class="text-uppercase">design and branding</h5>
           <h6>Interaction Design</h6>
           <h6>Graphic Design</h6>
           <h6>Identity Design</h6>
@@ -55,7 +58,7 @@
     </section>
     <section>
       <div>
-        <h2>work</h2>
+        <h2 class="text-uppercase">work</h2>
         <h4>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididuntut,<br>
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
